--- a/src/app.css
+++ b/src/app.css
@@ -1,18 +1,56 @@
-@import 'tailwindcss/preflight' layer(base);
-@import 'tailwindcss/utilities' layer(utilities);
+@import "tailwindcss";
+
+body {
+	@apply bg-background-light dark:bg-background-dark text-text-light dark:text-text-dark;
+}
 
 @theme {
-    /* colors */
-    --color-primary-dark: #323232;
-    --color-primary-light: #FFFFFF;
-    --color-text-light: #000000;
-    --color-text-dark: #EEEEEE;
-    --color-background-light: #EAEAEA;
-    --color-background-dark: #202020;
-    --color-svg-light: #000000;
-    --color-svg-dark: #FFFFFF;
-    
-    /* breakpoints */
-    --breakpoint-tablet: 660px;
-    --breakpoint-desktop: 1280px;
+	/* colors */
+	--color-*: initial;
+	
+	--color-primary-dark: oklch(26.75% 0 0); 
+	--color-primary-light: oklch(100% 0 0); 
+	--color-text-light: oklch(0% 0 0); 
+	--color-text-dark: oklch(93.95% 0 0); 
+	--color-background-light: oklch(92.94% 0 0); 
+	--color-background-dark: oklch(20.83% 0 0); 
+	--color-svg-light: oklch(0% 0 0); 
+	--color-svg-dark: oklch(100% 0 0);
+
+	/* breakpoints */
+	--breakpoint-*: initial;
+	
+	--breakpoint-tablet: 48rem;
+	--breakpoint-desktop: 64rem;
+
+	/* spacing */
+	/* TODO remove this spacing system after updating to tailwind-alpha-32 */
+	--spacing-0: 0rem;
+	--spacing-1: 0.0625rem;
+	--spacing-2: 0.125rem;
+	--spacing-3: 0.1875rem;
+	--spacing-4: 0.25rem;
+	--spacing-5: 0.3125rem;
+	--spacing-6: 0.375rem;
+	--spacing-7: 0.4375rem;
+	--spacing-8: 0.5rem;
+	--spacing-9: 0.5625rem;
+	--spacing-10: 0.625rem;
+	--spacing-12: 0.75rem;
+	--spacing-16: 1rem;
+	--spacing-20: 1.25rem;
+	--spacing-24: 1.5rem;
+	--spacing-32: 2rem;
+	--spacing-40: 2.5rem;
+	--spacing-48: 3rem;
+	--spacing-56: 3.5rem;
+	--spacing-64: 4rem;
+	--spacing-72: 4.5rem;
+	--spacing-80: 5rem;
+	--spacing-88: 5.5rem;
+	--spacing-96: 6rem;
+	--spacing-112: 7rem;
+	--spacing-128: 8rem;
+	--spacing-144: 9rem;
+	--spacing-160: 10rem;
 }
