--- a/src/app.css
+++ b/src/app.css
@@ -1,17 +1,15 @@
 @import url(https://fonts.bunny.net/css?family=ibm-plex-sans:400,500,600|lilita-one:400);
 @import 'tailwindcss';
 
-
 body {
 	@apply font-sans bg-background-light dark:bg-background-dark text-text-light dark:text-text-dark  mx-auto;
 }
 
 @theme {
-    /* fonts */
-    --font-family-sans: 'IBM Plex Sans', sans-serif;
-    --font-family-display: 'Lilita One', sans-serif;
-    
-    
+	/* fonts */
+	--font-family-sans: 'IBM Plex Sans', sans-serif;
+	--font-family-display: 'Lilita One', sans-serif;
+
 	/* colors */
 	--color-*: initial;
 
@@ -47,6 +45,7 @@ body {
 	--spacing-16: 1rem;
 	--spacing-20: 1.25rem;
 	--spacing-24: 1.5rem;
+	--spacing-28: 1.75rem;
 	--spacing-32: 2rem;
 	--spacing-40: 2.5rem;
 	--spacing-48: 3rem;
