--- a/src/app.css
+++ b/src/app.css
@@ -29,36 +29,12 @@ body {
 	--breakpoint-desktop: 64rem;
 
 	/* spacing */
-	/* TODO remove this spacing system after updating to tailwind-alpha-32 */
-	--spacing-0: 0rem;
-	--spacing-1: 0.0625rem;
-	--spacing-2: 0.125rem;
-	--spacing-3: 0.1875rem;
-	--spacing-4: 0.25rem;
-	--spacing-5: 0.3125rem;
-	--spacing-6: 0.375rem;
-	--spacing-7: 0.4375rem;
-	--spacing-8: 0.5rem;
-	--spacing-9: 0.5625rem;
-	--spacing-10: 0.625rem;
-	--spacing-12: 0.75rem;
-	--spacing-16: 1rem;
-	--spacing-20: 1.25rem;
-	--spacing-24: 1.5rem;
-	--spacing-28: 1.75rem;
-	--spacing-32: 2rem;
-	--spacing-40: 2.5rem;
-	--spacing-48: 3rem;
-	--spacing-56: 3.5rem;
-	--spacing-64: 4rem;
-	--spacing-72: 4.5rem;
-	--spacing-80: 5rem;
-	--spacing-88: 5.5rem;
-	--spacing-96: 6rem;
-	--spacing-112: 7rem;
-	--spacing-128: 8rem;
-	--spacing-144: 9rem;
-	--spacing-160: 10rem;
+	--spacing: 0.0625rem;
+}
+
+@utility container {
+	margin-inline: auto;
+	max-width: 80rem;
 }
 
 /* utilities*/
